added banner & updated favicon to static

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Samhällsvetenskapliga begrepp - kortspel</title>
-    <!--<link rel="icon" type="image/x-icon" href="/images/favicon.png">-->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
   På denna sida kan du browsa bland samhällsvetenskapliga begrepp relaterade till svenska skolans kursplaner, samt konstruera kortspel att skriva ut. 
