--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Samhällsvetenskapliga begrepp - kortspel</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+      #banner {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      }
+      #container {
+        max-width: 750px;
+        margin: 0 auto 0 auto;
+      }
+      .container {
+        position: relative;
+        text-align: center;
+        color: white;
+      }
+      .centered {
+        position: absolute;
+        top: 20%;
+        left: 40%;
+        transform: translate(-20%, -50%);
+      }
+font: size;{
+        font-size: 80px;
+      }
+    </style>
+    <body>
+      <div class="container-fluid">
+        <img id="banner" src="https://webbapp-concepts--jonatanblomberg.repl.co/static/banner.png" width: 100%>
+        <div class="centered">
+           <h1>SO-ONLINE</h1>
+        </div>
+      </div>
+      {% include 'nav.html' %}
+      <div id="container" style="text-align:center;">
+        <p class="lh-lg">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div>
+          {% for concept in concepts %}
+            {%include 'concepts.html' %}
+          {% endfor %}
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    </body>
   </head>
-  <body>
-  På denna sida kan du browsa bland samhällsvetenskapliga begrepp relaterade till svenska skolans kursplaner, samt konstruera kortspel att skriva ut. 
-  </body>
 </html>
