major restructuring of html templates

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+{% extends "base.html" %} {% block title %}Changed{% endblock %}
+
+{% block content %}
+<h1>This is the home page</h1>
+{% endblock %}
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -53,3 +58,4 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </body>
   </head>
 </html>
+ -->
