--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -35,4 +35,4 @@
       </div>
     </div>
   </nav>
-</div>
+</div> -->
