--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,16 +1,21 @@
-{% extends "base.html" %} {% block title %}Changed{% endblock %}
-
-{% block content %}
-<h1 align="center">Concepts</h1>
-<ul class="list-group list-group-flush" id="concepts">
-  {% for concept in user.concepts %}
-  <li class="list-group-item">{{ concept.concepts }}</li>
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+%}
+<h1 align="center">Notes</h1>
+<ul class="list-group list-group-flush" id="notes">
+  {% for note in user.notes %}
+  <li class="list-group-item">
+    {{ note.data }}
+    <button type="button" class="close" onClick="deleteNote({{ note.id }})">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </li>
   {% endfor %}
+</ul>
 <form method="POST">
-  <textarea name="concept" id="concept" class="form-control"></textarea>
+  <textarea name="note" id="note" class="form-control"></textarea>
   <br />
   <div align="center">
-    <button type="submit" class="btn btn-primary">Add Concept</button>
+    <button type="submit" class="btn btn-primary">Add Note</button>
   </div>
 </form>
 {% endblock %}
