--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
-<h1 align="center">Notes</h1>
+<h1 align="center">Concepts</h1>
 <ul class="list-group list-group-flush" id="notes">
-  {% for note in user.notes %}
+  {% for note in user.user_concepts %}
   <li class="list-group-item">
-    {{ note.data }}
+    {{ note.concept }}
     <button type="button" class="close" onClick="deleteNote({{ note.id }})">
       <span aria-hidden="true">&times;</span>
     </button>
