--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -77,10 +77,10 @@
 
 {% block javascript %}
     <script type="text/javascript">
-      function deleteNote(noteId) {
-  fetch("/delete-note", {
+      function deleteConcept(conceptId) {
+  fetch("/delete-concept", {
     method: "POST",
-    body: JSON.stringify({ noteId: noteId }),
+    body: JSON.stringify({ conceptId: conceptId }),
   }).then((_res) => {
     window.location.href = "/";
   });
