--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -25,3 +25,8 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.gradient-bar {
+  @apply h-12; /* Tailwind's height utility */
+  background: linear-gradient(45deg, blue 50%, red 50%);
+}
